# trello-flow

./: .gitignore  Cargo.toml  README.md  run.sh  todo.md  token.txt
example/: 1.csv  cfg.json
examples/: task.yml  trello_cred.yml
src/: dict.rs  err.rs  executor.rs  extractor.rs  file_manager.rs  files.rs  gui.rs  main.rs  matcher.rs  task.rs  telebot.rs  trello.rs
src/executor/: process.rs  settings.rs  state.rs
src/task/: context.rs  executor.rs  parse.rs  tasks.rs
