[package]
name = "trello-flow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.6.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = "4.1.4"
csv = "1.1"
yaml-rust = "0.4"
